--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,3 +5,7 @@ app:
 user:
     resource: "@UserBundle/Resources/config/routing.yml"
     prefix:   /
+
+api:
+    resource: "@APIBundle/Resources/config/routing.yml"
+    prefix: /api
