API : Create/Get new station

--- a/src/APIBundle/Resources/config/routing.yml
+++ b/src/APIBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ api_authenticate:
 api_update:
     path:     /update
     defaults: { _controller: APIBundle:API:updateStationInfo }
+
+api_create:
+    path: /create
+    defaults: { _controller: APIBundle:API:createStation }
