Homepage display all stations. /userhome display user stations

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -2,3 +2,7 @@ app_homepage:
     path:     /
     defaults: { _controller: AppBundle:Home:index }
 
+app_user_homepage:
+    path:     /userhome
+    defaults: { _controller: AppBundle:Home:indexUser }
+
